--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "jawa/api": "^1.0",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mosab/translation": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
