--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
+        "google/auth": "^1.45",
         "guzzlehttp/guzzle": "^7.2",
         "jawa/api": "^1.0",
         "laravel/framework": "^10.0",
